2006-08-18 12:46  ntiffin

	* ChangeLog, MyOutlineView.m, SqlDocument.h, SqlDocument.m: Add
	  missing SQL formation routines.

2006-08-13 18:54  ntiffin

	* ChangeLog, SqlDocument.m, TODO.txt: Fix bug associated with
	  releaseing explorer too early.

2006-08-12 11:39  ntiffin

	* ChangeLog, DataSource.m, SqlDocument.m: More memory cleanup.

2006-08-11 13:03  ntiffin

	* ChangeLog, SqlDocument.m: Fix some compiler warnings.

2006-07-16 18:17  ntiffin

	* ChangeLog, MyOutlineView.h, MyOutlineView.m, MyResultsView.h,
	  MyResultsView.m, SqlDocument.h, SqlDocument.m, TODO.txt,
	  English.lproj/MainMenu.nib/classes.nib,
	  English.lproj/MainMenu.nib/info.nib,
	  English.lproj/MainMenu.nib/objects.nib,
	  English.lproj/SqlDocument.nib/classes.nib,
	  English.lproj/SqlDocument.nib/info.nib,
	  English.lproj/SqlDocument.nib/keyedobjects.nib: Make font changes
	  work for schema and results views, make index generation use
	  autoincrementing index names, add help menu to bring up
	  postgresql html help files.

2006-06-24 11:20  ntiffin

	* SqlDocument.h, SqlDocument.m, TODO.txt,
	  English.lproj/MainMenu.nib/classes.nib,
	  English.lproj/MainMenu.nib/info.nib,
	  English.lproj/MainMenu.nib/objects.nib,
	  English.lproj/SqlDocument.nib/classes.nib,
	  English.lproj/SqlDocument.nib/info.nib,
	  English.lproj/SqlDocument.nib/keyedobjects.nib: Add SQL Log
	  window.

2006-06-21 08:42  ntiffin

	* ChangeLog, SqlDocument.m, SqlToolbarCategory.m, TODO.txt,
	  cancel_script_32.png, English.lproj/SqlDocument.nib/info.nib,
	  English.lproj/SqlDocument.nib/keyedobjects.nib: Add
	  NSUserDefaults, icon for canceling script, fix multiple statement
	  parsing problem.

2006-06-20 11:29  ntiffin

	* ChangeLog, SqlDocument.m, TODO.txt: Update for better round trip
	  function processing.

2006-06-10 13:43  ntiffin

	* ChangeLog: Update ChangeLog.

2006-06-02 12:29  ntiffin

	* MyOutlineView.h, MyOutlineView.m, SqlDocument.h, SqlDocument.m,